--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="header__container">
                 <nav class="header-menu">
                     <button class="header-button header-menu__item button-round" type="button"></button>
-                    <a href="#" class="header-logo header-menu__item burger_menu " href="#"><img class="header-menu__link_img header-menu--logo" src="assets/logo/mobile/Group.png" alt="logo cps"></a>
+                    <a href="#" class="header-logo header-menu__item" href="#"><img class="header-menu__link_img header-menu--logo" src="assets/logo/groupsvg.svg" alt="logo cps"></a>
                     <button class="header-button header-menu__item button-round" type="button"></button>
                 </nav>
             </div>
