--- a/index.html
+++ b/index.html
@@ -7,52 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="header__container">
-                <nav class="header-menu">
-                    <button class="header-button header-menu__item button-round" type="button"></button>
-                    <a href="#" class="header-logo header-menu__item" href="#"><img class="header-menu__link_img header-menu--logo" src="assets/logo/groupsvg.svg" alt="logo cps"></a>
-                    <button class="header-button header-menu__item button-round" type="button"></button>
-                </nav>
-            </div>
-    </header>
-    <main class="main">
-        <div class="main__container">
-            <nav class="services-nav">
-                <ul class="services-nav__list">
-                    <li><a href="#">Ремонт техники</a></li>
-                    <li><a href="#">Услуги и сервисы</a></li>
-                    <li><a href="#">Корпоративным клиентам</a></li>
-                    <li><a href="#">Продавцам техники</a></li>
-                    <li><a href="#">Партнёрам</a></li>
-                    <li><a href="#">Производителям</a></li>
-                    <li><a href="#">Наши сервисные центры</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </nav>
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="footer__container">
-            <nav class="footer-nav">
-                <button class="footer-button footer-nav__item button-round" type="button"></button>
-                <button class="footer-button footer-nav__item button-round" type="button"></button>
-                <button class="footer-button footer-nav__item button-round" type="button"></button>
-            </nav>
-            <nav class="footer-contacts">
-            <a class="footer__mail" href="mailto:mail@cps.com">mail@cps.com</a>
-            <a class="footer__phone" href="tel:+78008908900">8 800 890 8900</a>
-            </nav>
-        <div class="language-container">
-    <ul class="language-list">
-    <li><button class="button active" type="button" data-lang="en" >RU</button></li>
-    <li><button class="button" type="button" data-lang="es">EN</button></li>
-    <li><button class="button" type="button" data-lang="fr">CH</button></li>
-    </ul>
-        </div>
+  <div class="wrapper">
+    <div class="main">
+        <section class="main-section">
+            <h1 class="main-header">Ремонт техники различных брендов</h1>
+            <article class="main-slider"></article>
+        </section>
     </div>
-    </footer>
-    </div>
+  </div>
     </body>
 </html>
